Fix body horizontal scroll bar

--- a/parastaseis/elefantas-tou-panagioti-renieri/elefantas.css
+++ b/parastaseis/elefantas-tou-panagioti-renieri/elefantas.css
@@ -10,7 +10,6 @@ body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 1.5rem;
-    min-width: 100vw;
     box-sizing: border-box;
 }
 
